--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.5",
     "@stripe/stripe-js": "^3.0.3",
     "axios": "^1.6.7",
     "loadash": "^1.0.0",
